[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["cli_web/deepwiki/tests"]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests that hit the live DeepWiki / Devin Ada API",
    "unified: tests that require the Node unified_engine sidecar",
]
